# rome-tools

./: .gitignore  .prettierignore  .prettierrc.yml  README.md  package.json  tsconfig.json  vite.config.ts
scripts/: copy-assets.ts  generate-config.ts  preinstall.js
src/: app.router.ts  main.ts  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src/pages/: App.vue  Empty.vue  Playground.vue  QuickLauncher.vue
